# neuriplo

./: .actrc  .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  GEMINI.md  PRE_COMMIT_GUIDE.md  REPO_META.yaml  ROADMAP.md  Readme.md  TESTING_RECOMMENDATION.md  requirements-dev.txt  requirements.txt  verify_all.sh  versions.env
.agents/skills/docs-sync/: SKILL.md
.claude/: settings.json
.cursor/rules/: backends-model-agnostic.mdc
.githooks/: README.md  pre-commit  pre-push
.github/: copilot-instructions.md
.github/actions/free-disk-space/: action.yml
.github/actions/setup-buildx-retry/: action.yml
.github/workflows/: ci.yml  lint.yml  windows-build.yml
backends/cactus/src/: CactusInfer.cpp  CactusInfer.hpp  CactusRuntimeFactory.hpp
backends/cactus/test/: CMakeLists.txt  CactusInferTest.cpp  create_test_model.py  generate_model.sh
backends/executorch/src/: ExecuTorchInfer.cpp  ExecuTorchInfer.hpp  ExecuTorchRuntimeFactory.hpp
backends/executorch/test/: CMakeLists.txt  ExecuTorchInferTest.cpp  export_executorch_classifier.py  generate_model.sh
backends/ggml/src/: GGMLInfer.cpp  GGMLInfer.hpp  GGMLRuntimeFactory.hpp
backends/ggml/test/: CMakeLists.txt  GGMLInferTest.cpp  create_test_model.py  generate_model.sh
backends/libtensorflow/src/: TFDetectionAPI.cpp  TFDetectionAPI.hpp  TFRuntimeFactory.hpp
backends/libtensorflow/test/: CMakeLists.txt  TensorFlowInferTest.cpp  generate_tf_model.py
backends/libtorch/src/: LibtorchInfer.cpp  LibtorchInfer.hpp  LibtorchRuntimeFactory.hpp
backends/libtorch/test/: CMakeLists.txt  LibtorchInferTest.cpp  export_torchvision_classifier.py  generate_model.sh
backends/litert/src/: LiteRTInfer.cpp  LiteRTInfer.hpp  LiteRTRuntimeFactory.hpp
backends/litert/test/: CMakeLists.txt  LiteRTInferTest.cpp
backends/llamacpp/src/: LlamaCppInfer.cpp  LlamaCppInfer.hpp  LlamaCppRuntimeFactory.hpp
backends/llamacpp/test/: CMakeLists.txt  LlamaCppInferTest.cpp  create_test_model.py  generate_model.sh
backends/migraphx/src/: MIGraphXInfer.cpp  MIGraphXInfer.hpp  MIGraphXRuntimeFactory.hpp
backends/migraphx/test/: CMakeLists.txt  MIGraphXInferTest.cpp  export_onnx_classifier.py  generate_model.sh
backends/onnx-runtime/src/: ORTInfer.cpp  ORTInfer.hpp  (+1 more)
backends/onnx-runtime/test/: CMakeLists.txt  ONNXRuntimeInferTest.cpp  export_torchvision_classifier.py
backends/opencv-dnn/test/: CMakeLists.txt  OCVDNNInferEnhancedTest.cpp  OCVDNNInferHybridTest.cpp  OCVDNNInferTest.cpp  export_torchvision_classifier.py  generate_model.sh
backends/openvino/test/: CMakeLists.txt  OpenVINOInferTest.cpp  export_torchvision_classifier.py  generate_openvino_ir.sh
backends/src/: BackendDecorator.hpp  BackendRuntimeRegistry.cpp  BackendRuntimeRegistry.hpp  BackendState.hpp  BackendTestTemplate.hpp  HostTensorConverter.hpp  IAllocator.hpp  IBackendRuntimeFactory.hpp  ITensorConverter.hpp  InferenceInterface.cpp  InferenceInterface.hpp  InferenceMetadata.cpp  InferenceMetadata.hpp  MockInferenceInterface.hpp  ModelInfo.cpp  ModelInfo.hpp  ModelRunner.cpp  ModelRunner.hpp  TensorDataType.hpp  TensorDtype.hpp  TestingStrategy.md
backends/src/test/: CMakeLists.txt  PatternsTest.cpp  PluginLoaderTest.cpp
backends/tensorrt/test/: CMakeLists.txt  TensorRTInferTest.cpp  generate_trt_engine.sh  minimal_test.cpp  simple_test.cpp
backends/tvm/test/: CMakeLists.txt  TVMInferTest.cpp
client/: CMakeLists.txt  neuriplo_client_example.cpp
client/src/: InferenceClient.hpp
cmake/: BackendRegistry.cmake  Cactus.cmake  DependencyValidation.cmake  ExecuTorch.cmake  FindTensorFlow.cmake  FindTensorflow.cmake  GGML.cmake  LibTensorFlow.cmake  LibTorch.cmake  LinkBackend.cmake  LiteRT.cmake  LlamaCpp.cmake  MIGraphX.cmake  ONNXRuntime.cmake  OpenCVdnn.cmake  OpenVino.cmake  PluginBackends.cmake  SelectBackend.cmake  SetCompilerFlags.cmake  SetupTests.cmake  TVM.cmake  TensorRT.cmake  plugin_entry.cpp.in  plugin_export.map  versions.cmake
docker/: Dockerfile.base  Dockerfile.cactus  Dockerfile.executorch  Dockerfile.ggml  Dockerfile.libtensorflow  Dockerfile.libtorch  Dockerfile.litert  Dockerfile.llamacpp  Dockerfile.migraphx  Dockerfile.onnx-runtime  Dockerfile.opencvdnn  Dockerfile.openvino  Dockerfile.tensorrt  Dockerfile.tvm  README.openvino.md  README.tvm.md  run_cactus_tests.sh  run_ggml_tests.sh  run_libtensorflow_tests.sh  run_libtorch_tests.sh  run_llamacpp_tests.sh  run_opencvdnn_tests.sh  run_openvino_tests.sh  run_tensorrt_tests.sh  run_tvm_tests.sh
docs/: ADDING_BACKEND.md  CODE_QUALITY.md  DEPENDENCY_MANAGEMENT.md  EXECUTORCH_DELEGATES.md  LOCAL_CI.md  MULTIMODAL_ROADMAP.md  ORT_EXECUTION_PROVIDERS.md  PLUGIN_BACKENDS.md  QUICKSTART_SERVER_CLIENT.md  README.md  REFACTOR_DESIGN_PATTERNS.md  SERVER_CLIENT_USAGE.md  SERVER_MODE_IMPLEMENTATION.md  TENSORFLOW_BUILD_GUIDE.md  TESTING_DESIGN.md  TROUBLESHOOTING.md  TVM_BUILD_GUIDE.md  Versioning.md  WINDOWS_BUILD.md  WINDOWS_BUILD_GUIDE.md  backends.yaml
docs/plans/: ort-execution-providers.md
include/: InferenceBackendSetup.hpp  common.hpp
include/neuriplo/: plugin_abi.h
patches/: cactus-v1.14-arch-detect.py
scripts/: README.md  analyze_test_results.sh  backends.conf  build_cactus.sh  convert_onnx_to_ggml.py  convert_resnet18_to_ggml.py  convert_to_ggml.sh  gen_backend_docs.py  model_downloader.py  run_complete_tests.sh  setup_cactus.sh  setup_dependencies.ps1  setup_dependencies.sh  setup_executorch.sh  setup_ggml.sh  setup_libtensorflow.sh  setup_libtorch.sh  setup_litert.sh  setup_llamacpp.sh  setup_migraphx.sh  setup_onnx_runtime.sh  setup_openvino.sh  setup_tensorflow.sh  setup_tensorflow_pip.sh  setup_tensorrt.sh  setup_test_env.sh  setup_test_models.sh  setup_tvm.sh  test_backends.sh  test_hybrid_approach.sh  test_server_client.sh  validate_test_system.sh
scripts/quality/: clang_tidy.sh  common.sh  cppcheck.sh  format.sh  lsan-suppressions.txt  run.sh  sanitizers.sh  setup_hooks.sh
server/: CMakeLists.txt  neuriplo_server.cpp
server/src/: InferenceServer.hpp  Serialization.hpp
src/: InferenceBackendSetup.cpp
(+20 files in other folders)
